# tensorflow_example

./: CMakeLists.txt  Dockerfile  README.md  detection_model.cpp  detection_model.h  main.cpp  object_detection.cpp
python/: object_detection.py  single_layer.py  testing.py
